--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Hello GitHub</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>เริ่มต้นเขียน HTML แล้ว!</h1>
