--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>เริ่มต้นเขียน HTML แล้ว!</h1>
+  <h1>Hello World</h1>
+  <p>นี่คือเว็บไซต์ HTML หน้าแรกของฉัน ที่เชื่อมกับไฟล์ CSS แล้ว!</p>
+
+  <ul>
+    <li>ข้อ 1: สร้างไฟล์ HTML</li>
+    <li>ข้อ 2: เชื่อมกับ CSS</li>
+    <li>ข้อ 3: เพิ่มเนื้อหา</li>
 </body>
 </html>
