--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Hello GitHub</title>
-  <link rel="stylesheet" href="style.css">
+   <meta charset="UTF-8" />
+  <title>My Web Page</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <h1>Hello World</h1>
