--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
   <h1>Hello World</h1>
   <p>นี่คือเว็บไซต์ HTML หน้าแรกของฉัน ที่เชื่อมกับไฟล์ CSS แล้ว!</p>
+  <h1>ทดสอบสีหัวข้อ</h1>
+  <p>ทดสอบสีตัวหนังสือ</p>
 
   <ul>
     <li>ข้อ 1: สร้างไฟล์ HTML</li>
