--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Hello World</h1>
+  <h1>Hello World พิชิตพล</h1>
   <p>นี่คือเว็บไซต์ HTML หน้าแรกของฉัน ที่เชื่อมกับไฟล์ CSS แล้ว!</p>
   <h1>ทดสอบสีหัวข้อ</h1>
   <p>ทดสอบสีตัวหนังสือ</p>
