--- a/index.html
+++ b/index.html
@@ -1,18 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="th">
 <head>
-   <meta charset="UTF-8" />
-  <title>My Web Page</title>
-  <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8">
+    <title>หน้าแรกของฉัน</title>
 </head>
 <body>
-  <h1>Hello World พิชิตพล</h1>
-  <p>นี่คือเว็บไซต์ HTML หน้าแรกของฉัน ที่เชื่อมกับไฟล์ CSS แล้ว!</p>
-  <h1>ทดสอบสีหัวข้อ</h1>
-  <p>ทดสอบสีตัวหนังสือ</p>
-  <ul>
-    <li>ข้อ 1: สร้างไฟล์ HTML</li>
-    <li>ข้อ 2: เชื่อมกับ CSS</li>
-    <li>ข้อ 3: เพิ่มเนื้อหา</li>
+    <!-- เนื้อหาจะอยู่ที่นี่ -->
 </body>
 </html>
