--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>หน้าแรกของฉัน</title>
 </head>
 <body>
-    <!-- เนื้อหาจะอยู่ที่นี่ -->
+  <h1>สวัสดี! ฉันชื่อ โอเล่ </h1>
+  <p>ฉันเป็นผู้เริ่มต้นเรียนรู้ HTML และสนุกกับการสร้างเว็บไซต์.</p>
+  <p>ในหน้านี้ คุณจะได้เรียนรู้เกี่ยวกับสิ่งที่ฉันสนใจและงานอดิเรกของฉัน.</p>
 </body>
 </html>
