--- a/index.html
+++ b/index.html
@@ -8,5 +8,18 @@
   <h1>สวัสดี! ฉันชื่อ โอเล่ </h1>
   <p>ฉันเป็นผู้เริ่มต้นเรียนรู้ HTML และสนุกกับการสร้างเว็บไซต์.</p>
   <p>ในหน้านี้ คุณจะได้เรียนรู้เกี่ยวกับสิ่งที่ฉันสนใจและงานอดิเรกของฉัน.</p>
+  <h2>สิ่งที่ฉันสนใจและงานอดิเรก</h2>
+<ul>
+  <li>อ่านหนังสือ</li>
+  <li>ฟังเพลง</li>
+  <li>ดูหนัง/ซีรีส์</li>
+  <li>เรียนรู้สิ่งใหม่ๆ (เช่น HTML!)</li>
+</ul>
+    <h2>กิจวัตรประจำวันสั้นๆ</h2>
+<ol>
+  <li>ตื่นนอน</li>
+  <li>ดื่มกาแฟ</li>
+  <li>เริ่มเรียนโค้ด</li>
+</ol>
 </body>
 </html>
