--- a/index.html
+++ b/index.html
@@ -21,5 +21,7 @@
   <li>ดื่มกาแฟ</li>
   <li>เริ่มเรียนโค้ด</li>
 </ol>
+    <h2>รูปภาพของฉัน</h2>
+<img src="IMG_0053.jpeg" alt="รูปภาพของฉัน">
 </body>
 </html>
