--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
 <img src="IMG_0053.jpeg" alt="รูปภาพของฉัน">
     <h2>เชื่อมโยงกับโลกภายนอก</h2>
 <p>คุณสามารถค้นหาข้อมูลเพิ่มเติมได้ที่ <a href="https://www.google.com">Google</a>.</p>
-<p>และเยี่ยมชมโปรไฟล์ของฉันบน <a href="https://m.facebook.com/ole.phi.2024?" target="_blank">Facebook</a> (อย่าลืมเปลี่ยน URL เป็นของคุณเอง!).</p>
+<p>และเยี่ยมชมโปรไฟล์ของฉันบน <a href="https://m.facebook.com/ole.phi.2024?" target="_blank">Facebook</a> </p>
 </body>
 </html>
