--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 </ol>
     <h2>รูปภาพของฉัน</h2>
 <img src="IMG_0053.jpeg" alt="รูปภาพของฉัน">
+<img src="IMG_0060.jpeg" alt="รูปภาพที่2ของฉัน">
     <h2>เชื่อมโยงกับโลกภายนอก</h2>
 <p>คุณสามารถค้นหาข้อมูลเพิ่มเติมได้ที่ <a href="https://www.google.com">Google</a>.</p>
 <p>และเยี่ยมชมโปรไฟล์ของฉันบน <a href="https://m.facebook.com/ole.phi.2024?" target="_blank">Facebook</a> </p>
