--- a/index.html
+++ b/index.html
@@ -2,30 +2,15 @@
 <html lang="th">
 <head>
     <meta charset="UTF-8">
-    <title>หน้าแรกของฉัน</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ตัวอย่างที่ไม่แนะนำ</title>
 </head>
 <body>
-  <h1>สวัสดี! ฉันชื่อ โอเล่ </h1>
-  <p>ฉันเป็นผู้เริ่มต้นเรียนรู้ HTML และสนุกกับการสร้างเว็บไซต์.</p>
-  <p>ในหน้านี้ คุณจะได้เรียนรู้เกี่ยวกับสิ่งที่ฉันสนใจและงานอดิเรกของฉัน.</p>
-  <h2>สิ่งที่ฉันสนใจและงานอดิเรก</h2>
-<ul>
-  <li>อ่านหนังสือ</li>
-  <li>ฟังเพลง</li>
-  <li>ดูหนัง/ซีรีส์</li>
-  <li>เรียนรู้สิ่งใหม่ๆ (เช่น HTML!)</li>
-</ul>
-    <h2>กิจวัตรประจำวันสั้นๆ</h2>
-<ol>
-  <li>ตื่นนอน</li>
-  <li>ดื่มกาแฟ</li>
-  <li>เริ่มเรียนโค้ด</li>
-</ol>
-    <h2>รูปภาพของฉัน</h2>
-<img src="IMG_0061.jpeg" alt="รูปภาพของฉัน">
-<img src="IMG_0062.jpeg" alt="รูปภาพที่2ของฉัน">
-    <h2>เชื่อมโยงกับโลกภายนอก</h2>
-<p>คุณสามารถค้นหาข้อมูลเพิ่มเติมได้ที่ <a href="https://www.google.com">Google</a>.</p>
-<p>และเยี่ยมชมโปรไฟล์ของฉันบน <a href="https://m.facebook.com/ole.phi.2024?" target="_blank">Facebook</a> </p>
+
+    <h1>หัวข้อหลัก</h1>
+    <p>นี่คือเนื้อหาของย่อหน้าแรก</p>
+
+    <link rel="stylesheet" href="style.css">
+
 </body>
 </html>
