--- a/index.html
+++ b/index.html
@@ -7,10 +7,18 @@
 </head>
 <body>
 
-    <h1>หัวข้อหลัก</h1>
-    <p>นี่คือเนื้อหาของย่อหน้าแรก</p>
+  <h1>แกลเลอรี่สัตว์เลี้ยงน่ารัก</h1>
 
-    <link rel="stylesheet" href="style.css">
+<h2>รูปน้องหมา</h2>
+<img src="https://images.unsplash.com/photo-1543466835-099453712952?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="น้องหมาสีน้ำตาลกำลังนอนหลับอยู่บนพื้น" width="400" height="300">
+<p>น้องหมาตัวนี้กำลังนอนหลับสบายเลย</p>
+
+<h2>รูปน้องแมว</h2>
+<img src="cat.jpg" alt="น้องแมวสามสีหน้าตาน่ารักกำลังจ้องมอง">
+<p>น้องแมวตัวนี้ดูน่ารักและขี้อ้อน</p>
+
+<img src="nonexistent_image.jpg" alt="รูปภาพนี้ไม่สามารถโหลดได้">
+
 
 </body>
 </html>
