--- a/index.html
+++ b/index.html
@@ -7,14 +7,20 @@
 </head>
 <body>
 
-  <h2>สิ่งที่ต้องเตรียมสำหรับสัตว์เลี้ยง</h2>
-<ul>
-    <li>อาหารสัตว์เลี้ยง</li>
-    <li>ชามอาหารและน้ำ</li>
-    <li>ของเล่น</li>
-    <li>ที่นอน</li>
-    <li>ปลอกคอและสายจูง</li>
-</ul>
+  <h2>ขั้นตอนการดูแลสุนัขเบื้องต้น</h2>
+<ol>
+    <li>ให้อาหารและน้ำสะอาดเป็นประจำ</li>
+    <li>พาไปเดินเล่นและออกกำลังกาย</li>
+    <li>แปรงขนและอาบน้ำอย่างสม่ำเสมอ</li>
+    <li>พาไปฉีดวัคซีนตามกำหนด</li>
+</ol>
+
+<h2>ลำดับผู้ชนะการประกวดสัตว์เลี้ยง</h2>
+<ol type="I" start="3">
+    <li>น้องหมาบ๊อบบี้</li>
+    <li>น้องแมวเหมียว</li>
+    <li>น้องกระต่ายปุยฝ้าย</li>
+</ol>
 
 
 </body>
