--- a/index.html
+++ b/index.html
@@ -3,25 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ตัวอย่างที่ไม่แนะนำ</title>
+    <title>หน้าเว็บสัตว์เลี้ยงของฉัน</title>
 </head>
 <body>
+    <h1>แกลเลอรี่สัตว์เลี้ยงน่ารัก</h1>
 
-  <h2>ขั้นตอนการดูแลสุนัขเบื้องต้น</h2>
-<ol>
-    <li>ให้อาหารและน้ำสะอาดเป็นประจำ</li>
-    <li>พาไปเดินเล่นและออกกำลังกาย</li>
-    <li>แปรงขนและอาบน้ำอย่างสม่ำเสมอ</li>
-    <li>พาไปฉีดวัคซีนตามกำหนด</li>
-</ol>
+    <h2>รูปน้องหมา</h2>
+    <img src="https://images.unsplash.com/photo-1543466835-099453712952?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="น้องหมาสีน้ำตาลกำลังนอนหลับอยู่บนพื้น" width="400">
+    <p>น้องหมาตัวนี้กำลังนอนหลับสบายเลย</p>
 
-<h2>ลำดับผู้ชนะการประกวดสัตว์เลี้ยง</h2>
-<ol type="I" start="3">
-    <li>น้องหมาบ๊อบบี้</li>
-    <li>น้องแมวเหมียว</li>
-    <li>น้องกระต่ายปุยฝ้าย</li>
-</ol>
+    <h2>รูปน้องแมว</h2>
+    <img src="https://images.unsplash.com/photo-1518791841217-8f162f1e1131?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="น้องแมวสามสีหน้าตาน่ารักกำลังจ้องมอง" width="300">
+    <p>น้องแมวตัวนี้ดูน่ารักและขี้อ้อน</p>
 
+    <hr> <h2>สิ่งที่ต้องเตรียมสำหรับสัตว์เลี้ยง</h2>
+    <ul>
+        <li>อาหารสัตว์เลี้ยง</li>
+        <li>ชามอาหารและน้ำ</li>
+        <li>ของเล่น</li>
+        <li>ที่นอน</li>
+        <li>ปลอกคอและสายจูง</li>
+    </ul>
 
+    <h2>ขั้นตอนการดูแลสุนัขเบื้องต้น</h2>
+    <ol>
+        <li>ให้อาหารและน้ำสะอาดเป็นประจำ</li>
+        <li>พาไปเดินเล่นและออกกำลังกาย</li>
+        <li>แปรงขนและอาบน้ำอย่างสม่ำเสมอ</li>
+        <li>พาไปฉีดวัคซีนตามกำหนด</li>
+    </ol>
+
+    <p><a href="https://www.petmd.com/" target="_blank">อ่านบทความเกี่ยวกับสัตว์เลี้ยงเพิ่มเติม</a></p>
 </body>
 </html>
