--- a/index.html
+++ b/index.html
@@ -5,34 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>หน้าเว็บสัตว์เลี้ยงของฉัน</title>
 </head>
-<body>
-    <h1>แกลเลอรี่สัตว์เลี้ยงน่ารัก</h1>
 
-    <h2>รูปน้องหมา</h2>
-    <img src="https://images.unsplash.com/photo-1543466835-099453712952?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="น้องหมาสีน้ำตาลกำลังนอนหลับอยู่บนพื้น" width="400">
-    <p>น้องหมาตัวนี้กำลังนอนหลับสบายเลย</p>
+   <body>
+    <h1>หน้าแรกของฉัน</h1>
 
-    <h2>รูปน้องแมว</h2>
-    <img src="https://images.unsplash.com/photo-1518791841217-8f162f1e1131?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="น้องแมวสามสีหน้าตาน่ารักกำลังจ้องมอง" width="300">
-    <p>น้องแมวตัวนี้ดูน่ารักและขี้อ้อน</p>
+    <div style="background-color: lightblue; padding: 10px;">
+        <h2>ยินดีต้อนรับ!</h2>
+        <p>ค้นหาข้อมูลที่คุณต้องการที่นี่</p>
+        <a href="#">หน้าแรก</a> | <a href="#">สินค้า</a> | <a href="#">ติดต่อเรา</a>
+    </div>
 
-    <hr> <h2>สิ่งที่ต้องเตรียมสำหรับสัตว์เลี้ยง</h2>
-    <ul>
-        <li>อาหารสัตว์เลี้ยง</li>
-        <li>ชามอาหารและน้ำ</li>
-        <li>ของเล่น</li>
-        <li>ที่นอน</li>
-        <li>ปลอกคอและสายจูง</li>
-    </ul>
-
-    <h2>ขั้นตอนการดูแลสุนัขเบื้องต้น</h2>
-    <ol>
-        <li>ให้อาหารและน้ำสะอาดเป็นประจำ</li>
-        <li>พาไปเดินเล่นและออกกำลังกาย</li>
-        <li>แปรงขนและอาบน้ำอย่างสม่ำเสมอ</li>
-        <li>พาไปฉีดวัคซีนตามกำหนด</li>
-    </ol>
-
-    <p><a href="https://www.petmd.com/" target="_blank">อ่านบทความเกี่ยวกับสัตว์เลี้ยงเพิ่มเติม</a></p>
+    <div style="margin-top: 20px; border: 1px solid gray; padding: 15px;">
+        <h3>บทความล่าสุด</h3>
+        <p>วันนี้เราจะมาพูดถึงเรื่องราวที่น่าสนใจมากมาย...</p>
+        <p>อ่านเพิ่มเติมได้ที่นี่</p>
+    </div>
 </body>
+
 </html>
