--- a/index.html
+++ b/index.html
@@ -5,21 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>หน้าเว็บสัตว์เลี้ยงของฉัน</title>
 </head>
-
-   <body>
-    <h1>หน้าแรกของฉัน</h1>
-
-    <div style="background-color: lightblue; padding: 10px;">
-        <h2>ยินดีต้อนรับ!</h2>
-        <p>ค้นหาข้อมูลที่คุณต้องการที่นี่</p>
-        <a href="#">หน้าแรก</a> | <a href="#">สินค้า</a> | <a href="#">ติดต่อเรา</a>
-    </div>
-
-    <div style="margin-top: 20px; border: 1px solid gray; padding: 15px;">
-        <h3>บทความล่าสุด</h3>
-        <p>วันนี้เราจะมาพูดถึงเรื่องราวที่น่าสนใจมากมาย...</p>
-        <p>อ่านเพิ่มเติมได้ที่นี่</p>
-    </div>
+<body>
+    <h1>คำทักทาย</h1>
+    <p>สวัสดีครับ ผมเป็น <span style="color: blue; font-weight: bold;">นักพัฒนาเว็บไซต์</span> กำลังเรียนรู้ HTML.</p>
+    <p>นี่คือข้อความที่ต้องการ <span style="text-decoration: underline;">เน้น</span> บางส่วน.</p>
 </body>
+
 
 </html>
