--- a/index.html
+++ b/index.html
@@ -7,17 +7,14 @@
 </head>
 <body>
 <body>
-    <h1>แบบฟอร์มลงทะเบียน</h1>
     <form action="#" method="post">
-        <p>กรุณากรอกข้อมูลของคุณ</p>
-    </form>
-</body>
+    <label for="username">ชื่อผู้ใช้:</label><br>
+    <input type="text" id="username" name="username" placeholder="กรอกชื่อผู้ใช้ของคุณ" required><br><br>
 
-<body>
-    <h1>แบบฟอร์มลงทะเบียน</h1>
-    <form action="#" method="post">
-        <p>กรุณากรอกข้อมูลของคุณ</p>
-    </form>
+    <label for="email">อีเมล:</label><br>
+    <input type="email" id="email" name="user_email" placeholder="example@domain.com" required><br><br>
+</form>
+
 </body>
 
 </body>
