--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
     <label for="email">อีเมล:</label><br>
     <input type="email" id="email" name="user_email" placeholder="example@domain.com" required><br><br>
 </form>
+<form action="#" method="post">
+    <label for="pwd">รหัสผ่าน:</label><br>
+    <input type="password" id="pwd" name="password" required><br><br>
+</form>
+<form action="#" method="post">
+    <input type="submit" value="ลงทะเบียน">
+</form>
+<label for="myInput">ป้ายกำกับของฉัน:</label>
+<input type="text" id="myInput" name="my_data">
 
 </body>
 
