--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
 </form>
 <label for="myInput">ป้ายกำกับของฉัน:</label>
 <input type="text" id="myInput" name="my_data">
+    <p>เลือกความสนใจของคุณ:</p>
+<input type="checkbox" id="coding" name="interest" value="coding">
+<label for="coding">การเขียนโค้ด</label><br>
+<input type="checkbox" id="design" name="interest" value="design" checked>
+<label for="design">การออกแบบ</label><br>
+<input type="checkbox" id="marketing" name="interest" value="marketing">
+<label for="marketing">การตลาด</label><br><br>
+
 
 </body>
 
