--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
 <input type="checkbox" id="marketing" name="interest" value="marketing">
 <label for="marketing">การตลาด</label><br><br>
 
+<p>เลือกเพศของคุณ:</p>
+<input type="radio" id="male" name="gender" value="male">
+<label for="male">ชาย</label><br>
+<input type="radio" id="female" name="gender" value="female">
+<label for="female">หญิง</label><br>
+<input type="radio" id="other" name="gender" value="other" checked>
+<label for="other">อื่นๆ</label><br><br>
 
 </body>
 
