--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
 <label for="female">หญิง</label><br>
 <input type="radio" id="other" name="gender" value="other" checked>
 <label for="other">อื่นๆ</label><br><br>
+<label for="birthdate">วันเกิด:</label><br>
+<input type="date" id="birthdate" name="birthdate"><br><br>
+<label for="quantity">จำนวนสินค้า:</label><br>
+<input type="number" id="quantity" name="quantity" min="1" max="100" value="1"><br><br>
 
 </body>
 
