--- a/index.html
+++ b/index.html
@@ -3,47 +3,88 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>เว็บไซต์ของฉัน - Semantic HTML</title>
+    <title>แบบฟอร์มลงทะเบียน</title>
+    <style>
+        body { font-family: Arial, sans-serif; margin: 20px; }
+        form { border: 1px solid #ccc; padding: 20px; border-radius: 8px; max-width: 500px; margin: auto; }
+        label { display: block; margin-bottom: 5px; font-weight: bold; }
+        input[type="text"],
+        input[type="password"],
+        input[type="email"],
+        input[type="number"],
+        input[type="date"] {
+            width: calc(100% - 10px);
+            padding: 8px;
+            margin-bottom: 10px;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+        }
+        input[type="submit"] {
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px 15px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 16px;
+        }
+        input[type="submit"]:hover {
+            background-color: #45a049;
+        }
+        .checkbox-group, .radio-group {
+            margin-bottom: 15px;
+        }
+        .checkbox-group label, .radio-group label {
+            display: inline-block;
+            margin-right: 15px;
+            font-weight: normal;
+        }
+        .checkbox-group input, .radio-group input {
+            margin-right: 5px;
+        }
+    </style>
 </head>
 <body>
-<body>
+    <h1>แบบฟอร์มลงทะเบียนผู้ใช้งาน</h1>
+
     <form action="#" method="post">
-    <label for="username">ชื่อผู้ใช้:</label><br>
-    <input type="text" id="username" name="username" placeholder="กรอกชื่อผู้ใช้ของคุณ" required><br><br>
+        <label for="fullname">ชื่อ-นามสกุล:</label>
+        <input type="text" id="fullname" name="fullname" placeholder="กรอกชื่อเต็มของคุณ" required>
 
-    <label for="email">อีเมล:</label><br>
-    <input type="email" id="email" name="user_email" placeholder="example@domain.com" required><br><br>
-</form>
-<form action="#" method="post">
-    <label for="pwd">รหัสผ่าน:</label><br>
-    <input type="password" id="pwd" name="password" required><br><br>
-</form>
-<form action="#" method="post">
-    <input type="submit" value="ลงทะเบียน">
-</form>
-<label for="myInput">ป้ายกำกับของฉัน:</label>
-<input type="text" id="myInput" name="my_data">
-    <p>เลือกความสนใจของคุณ:</p>
-<input type="checkbox" id="coding" name="interest" value="coding">
-<label for="coding">การเขียนโค้ด</label><br>
-<input type="checkbox" id="design" name="interest" value="design" checked>
-<label for="design">การออกแบบ</label><br>
-<input type="checkbox" id="marketing" name="interest" value="marketing">
-<label for="marketing">การตลาด</label><br><br>
+        <label for="useremail">อีเมล:</label>
+        <input type="email" id="useremail" name="user_email" placeholder="example@domain.com" required>
 
-<p>เลือกเพศของคุณ:</p>
-<input type="radio" id="male" name="gender" value="male">
-<label for="male">ชาย</label><br>
-<input type="radio" id="female" name="gender" value="female">
-<label for="female">หญิง</label><br>
-<input type="radio" id="other" name="gender" value="other" checked>
-<label for="other">อื่นๆ</label><br><br>
-<label for="birthdate">วันเกิด:</label><br>
-<input type="date" id="birthdate" name="birthdate"><br><br>
-<label for="quantity">จำนวนสินค้า:</label><br>
-<input type="number" id="quantity" name="quantity" min="1" max="100" value="1"><br><br>
+        <label for="create_password">รหัสผ่าน:</label>
+        <input type="password" id="create_password" name="password" required>
 
-</body>
+        <label for="birthdate">วันเกิด:</label>
+        <input type="date" id="birthdate" name="birthdate">
+
+        <div class="radio-group">
+            <p>เพศ:</p>
+            <input type="radio" id="male" name="gender" value="male">
+            <label for="male">ชาย</label>
+            <input type="radio" id="female" name="gender" value="female">
+            <label for="female">หญิง</label>
+            <input type="radio" id="prefer_not_say" name="gender" value="prefer_not_say" checked>
+            <label for="prefer_not_say">ไม่ระบุ</label>
+        </div>
+
+        <div class="checkbox-group">
+            <p>ความสนใจ:</p>
+            <input type="checkbox" id="coding" name="interest" value="coding">
+            <label for="coding">การเขียนโปรแกรม</label><br>
+            <input type="checkbox" id="design" name="interest" value="design">
+            <label for="design">การออกแบบ</label><br>
+            <input type="checkbox" id="reading" name="interest" value="reading">
+            <label for="reading">การอ่านหนังสือ</label>
+        </div>
+
+        <label for="num_children">จำนวนบุตร (ถ้ามี):</label>
+        <input type="number" id="num_children" name="num_children" min="0" max="10" value="0">
+
+        <input type="submit" value="ลงทะเบียน">
+    </form>
 
 </body>
 </html>
