--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <style>
        body { font-family: Arial,sans-sarif; margin: 20 px;} 
        form { border: 1 px solid #ccc; padding: 20 px; border-radius: 8 px; mmax-width: 500 px; margin: 20 px auto;}
+       label {display: block; margin-bottom: 5 px; font-weight:bold;}
     </style>
     
     
