--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         input[type="password"],
         input[type="email"],
         input[type="number"],
-        input[type="date"] 
+        input[type="date"] }
     </style>
     
     
