--- a/index.html
+++ b/index.html
@@ -4,46 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>แบบฟอร์มลงทะเบียน</title>
-    <style>
-        body { font-family: Arial, sans-serif; margin: 20px; }
-        form { border: 1px solid #ccc; padding: 20px; border-radius: 8px; max-width: 500px; margin: auto; }
-        label { display: block; margin-bottom: 5px; font-weight: bold; }
-        input[type="text"],
-        input[type="password"],
-        input[type="email"],
-        input[type="number"],
-        input[type="date"] {
-            width: calc(100% - 10px);
-            padding: 8px;
-            margin-bottom: 10px;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-        }
-        input[type="submit"] {
-            background-color: #4CAF50;
-            color: white;
-            padding: 10px 15px;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            font-size: 16px;
-        }
-        input[type="submit"]:hover {
-            background-color: #45a049;
-        }
-        .checkbox-group, .radio-group {
-            margin-bottom: 15px;
-        }
-        .checkbox-group label, .radio-group label {
-            display: inline-block;
-            margin-right: 15px;
-            font-weight: normal;
-        }
-        .checkbox-group input, .radio-group input {
-            margin-right: 5px;
-        }
-    </style>
-</head>
+    </head>
 <body>
-    
+    <form action="#" method="post">
+        <label for="username">ชื่อผู้ใช้:</label>
+        <input type="text" id="username" name="username">
+        <br><br>
+
+        <label for="password">รหัสผ่าน:</label>
+        <input type="password" id="password" name="password">
+        <br><br>
+
+        <label for="email">อีเมล:</label>
+        <input type="email" id="email" name="email">
+        <br><br>
+
+        <label for="age">อายุ:</label>
+        <input type="number" id="age" name="age">
+        <br><br>
+
+        <label for="birthdate">วันเกิด:</label>
+        <input type="date" id="birthdate" name="birthdate">
+        <br><br>
+
+        <p>เพศ:</p>
+        <div class="radio-group">
+            <input type="radio" id="male" name="gender" value="male">
+            <label for="male">ชาย</label>
+            <input type="radio" id="female" name="gender" value="female">
+            <label for="female">หญิง</label>
+        </div>
+        <br>
+
+        <p>ความสนใจ:</p>
+        <div class="checkbox-group">
+            <input type="checkbox" id="coding" name="interest" value="coding">
+            <label for="coding">การเขียนโปรแกรม</label>
+            <input type="checkbox" id="design" name="interest" value="design">
+            <label for="design">การออกแบบ</label>
+        </div>
+        <br><br>
+
+        <input type="submit" value="ส่งข้อมูล">
+    </form>
+</body>
 </html>
