--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="th">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>แบบฟอร์มลงทะเบียน</title>
-    </head>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>แบบฟอร์อมลงทะเบียน</title>
+</head>
 <body>
-    <form action="#" method="post">
+    <form acion="#" method="post">
         <label for="username">ชื่อผู้ใช้:</label>
         <input type="text" id="username" name="username">
         <br><br>
@@ -15,37 +15,6 @@
         <input type="password" id="password" name="password">
         <br><br>
 
-        <label for="email">อีเมล:</label>
-        <input type="email" id="email" name="email">
-        <br><br>
-
-        <label for="age">อายุ:</label>
-        <input type="number" id="age" name="age">
-        <br><br>
-
-        <label for="birthdate">วันเกิด:</label>
-        <input type="date" id="birthdate" name="birthdate">
-        <br><br>
-
-        <p>เพศ:</p>
-        <div class="radio-group">
-            <input type="radio" id="male" name="gender" value="male">
-            <label for="male">ชาย</label>
-            <input type="radio" id="female" name="gender" value="female">
-            <label for="female">หญิง</label>
-        </div>
-        <br>
-
-        <p>ความสนใจ:</p>
-        <div class="checkbox-group">
-            <input type="checkbox" id="coding" name="interest" value="coding">
-            <label for="coding">การเขียนโปรแกรม</label>
-            <input type="checkbox" id="design" name="interest" value="design">
-            <label for="design">การออกแบบ</label>
-        </div>
-        <br><br>
-
-        <input type="submit" value="ส่งข้อมูล">
-    </form>
+        
+        
 </body>
-</html>
