--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
         <input type="password" id="password" name="password">
         <br><br>
 
-        
+        <label for="email">อิเมลล์:</label>
+        <input type="eemail" id="email" name="email">
+        <br><br>
+
+        <label for="age">อายุ:</label>
+        <input type="number" id="age" name="age">
+        <br><br>
+
+        <label for="birthdate">วันเกิด:</label>
+        <input type="date" id="birthddate" name="birthdate">
+        <br><br>
         
 </body>
