--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <input type="eemail" id="email" name="email">
         <br><br>
 
-        <label for="age">อายุ:</label>
+        <label for="age">อายุ:</label> ปี
         <input type="number" id="age" name="age">
         <br><br>
 
