--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <input type="eemail" id="email" name="email">
         <br><br>
 
-        <label for="age">อายุ:</label> ปี
-        <input type="number" id="age" name="age">
+        <label for="age">อายุ:</label> 
+        <input type="number" id="age" name="age"> ปี
         <br><br>
 
         <label for="birthdate">วันเกิด:</label>
