--- a/index.html
+++ b/index.html
@@ -26,5 +26,9 @@
         <label for="birthdate">วันเกิด:</label>
         <input type="date" id="birthddate" name="birthdate">
         <br><br>
-        
+
+        <p>เพศ:</p>
+        <div class="radio-group">
+            <input type="radio" id="male" name="gender" value="male">
+        </div>
 </body>
