--- a/index.html
+++ b/index.html
@@ -30,5 +30,6 @@
         <p>เพศ:</p>
         <div class="radio-group">
             <input type="radio" id="male" name="gender" value="male">
-        </div>
+            <label for="male">ชาย</label>
+        </div>"
 </body>
