--- a/index.html
+++ b/index.html
@@ -31,5 +31,8 @@
         <div class="radio-group">
             <input type="radio" id="male" name="gender" value="male">
             <label for="male">ชาย</label>
-        </div>"
+            <input type="radio" id="female" name="gender" value="female">
+            <label for="femal">หญิง</label>
+        </div>
+        <br>
 </body>
