--- a/index.html
+++ b/index.html
@@ -35,4 +35,11 @@
             <label for="femal">หญิง</label>
         </div>
         <br>
+        <p>ความสนใจ:</p>
+        <div class="checkbox-group">
+            <input type="checkbok" id="coding" name="interest" value="coding">
+            <label for="coding">การเขียนโปรแกรม:</label>
+            <input type="checkbok" id="design" name="interest" value="deesign">
+            <label for="design">การออกแบบ:</label>
+        </div>
 </body>
