--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
         <br>
         <p>ความสนใจ:</p>
         <div class="checkbox-group">
-            <input type="checkbok" id="coding" name="interest" value="coding">
+            <input type="checkbox" id="coding" name="interest" value="coding">
             <label for="coding">การเขียนโปรแกรม:</label>
-            <input type="checkbok" id="design" name="interest" value="deesign">
+            <input type="checkbox" id="design" name="interest" value="design">
             <label for="design">การออกแบบ:</label>
         </div>
         <br><br>
