--- a/index.html
+++ b/index.html
@@ -43,4 +43,6 @@
             <label for="design">การออกแบบ:</label>
         </div>
         <br><br>
+        <input type="submit" value="ส่งข้อมูล">
+    </form>
 </body>
