--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>แบบฟอร์อมลงทะเบียน</title>
+    <style>
+body {font-family:Arial,sans-serif;margin: 20px;}
+</style>
 </head>
 <body>
     <form acion="#" method="post">
