--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <style>
 body {font-family:Arial,sans-serif;margin: 20px;}
 form { border: 1px solid #ccc; padding: 20px; border-radius: 8px; max-width: 500px; margin: auto; }
+label { display: block; margin-bottom: 5px; font-weight: bold; }
 </style>
 </head>
 <body>
