--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
 body {font-family:Arial,sans-serif;margin: 20px;}
 form { border: 1px solid #ccc; padding: 20px; border-radius: 8px; max-width: 500px; margin: auto; }
 label { display: block; margin-bottom: 5px; font-weight: bold; }
+input[type="text"],
+input[type="password"],
+input[type="email"],
+input[type="number"],
+input[type="date"] {
+width: calc(100% - 10px);
+padding: 8px;
+margin-bottom: 10px;
+border: 1px solid #ddd;
+border-radius: 4px;
+}
 </style>
 </head>
 <body>
