--- a/index.html
+++ b/index.html
@@ -18,6 +18,28 @@ padding: 8px;
 margin-bottom: 10px;
 border: 1px solid #ddd;
 border-radius: 4px;
+input[type="submit"] {
+background-color: #4CAF50;
+color: white;
+padding: 10px 15px;
+border: none;
+border-radius: 4px;
+cursor: pointer;
+font-size: 16px;
+}
+input[type="submit"]:hover {
+background-color: #45a049;
+}
+.checkbox-group, .radio-group {
+margin-bottom: 15px;
+}
+.checkbox-group label, .radio-group label {
+display: inline-block;
+margin-right: 15px;
+font-weight: normal;
+}
+.checkbox-group input, .radio-group input {
+margin-right: 5px;
 }
 </style>
 </head>
