--- a/index.html
+++ b/index.html
@@ -5,3 +5,9 @@
 <meta name="viewport" content="width=device-width,initoal-scal=1.0">
 <title>แบบฟอร์อมลงทะเบียนของโอเล่</title>
 </head>
+<body>
+  <h1>แบบฟอร์อมลงทะเบียนผู้ใช้งาน</h1>
+  <form action="#" method="post">
+  <label for="fullname">ชื่อ-นามสุกล:</label>
+  <input type="text" id="fullname" name="fullname" placehoder="กรอกชื่อเต็มของคุณ" required>
+</body>
