--- a/index.html
+++ b/index.html
@@ -10,4 +10,7 @@
   <form action="#" method="post">
   <label for="fullname">ชื่อ-นามสุกล:</label>
   <input type="text" id="fullname" name="fullname" placehoder="กรอกชื่อเต็มของคุณ" required>
+
+  <label for="usernamr">อิเมลล์</label>
+  <input type="password" id="create_password" name="password" required>
 </body>
