--- a/index.html
+++ b/index.html
@@ -2,15 +2,89 @@
 <html lang="th">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width,initoal-scal=1.0">
-<title>แบบฟอร์อมลงทะเบียนของโอเล่</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>แบบฟอร์มลงทะเบียน</title>
+<style>
+body { font-family: Arial, sans-serif; margin: 20px; }
+form { border: 1px solid #ccc; padding: 20px; border-radius: 8px; max-width: 500px; margin: auto; }
+label { display: block; margin-bottom: 5px; font-weight: bold; }
+input[type="text"],
+input[type="password"],
+input[type="email"],
+input[type="number"],
+input[type="date"] {
+width: calc(100% - 10px);
+padding: 8px;
+margin-bottom: 10px;
+border: 1px solid #ddd;
+border-radius: 4px;
+}
+input[type="submit"] {
+background-color: #4CAF50;
+color: white;
+padding: 10px 15px;
+border: none;
+border-radius: 4px;
+cursor: pointer;
+font-size: 16px;
+}
+input[type="submit"]:hover {
+background-color: #45a049;
+}
+.checkbox-group, .radio-group {
+margin-bottom: 15px;
+}
+.checkbox-group label, .radio-group label {
+display: inline-block;
+margin-right: 15px;
+font-weight: normal;
+}
+.checkbox-group input, .radio-group input {
+margin-right: 5px;
+}
+</style>
 </head>
 <body>
-  <h1>แบบฟอร์อมลงทะเบียนผู้ใช้งาน</h1>
-  <form action="#" method="post">
-  <label for="fullname">ชื่อ-นามสุกล:</label>
-  <input type="text" id="fullname" name="fullname" placehoder="กรอกชื่อเต็มของคุณ" required>
+<h1>แบบฟอร์มลงทะเบียนผู้ใช้งาน</h1>
 
-  <label for="usernamr">อิเมลล์</label>
-  <input type="password" id="create_password" name="password" required>
+<form action="#" method="post">
+<label for="fullname">ชื่อ-นามสกุล:</label>
+<input type="text" id="fullname" name="fullname" placeholder="กรอกชื่อเต็มของคุณ" required>
+
+<label for="useremail">อีเมล:</label>
+<input type="email" id="useremail" name="user_email" placeholder="example@domain.com" required>
+
+<label for="create_password">รหัสผ่าน:</label>
+<input type="password" id="create_password" name="password" required>
+
+<label for="birthdate">วันเกิด:</label>
+<input type="date" id="birthdate" name="birthdate">
+
+<div class="radio-group">
+<p>เพศ:</p>
+<input type="radio" id="male" name="gender" value="male">
+<label for="male">ชาย</label>
+<input type="radio" id="female" name="gender" value="female">
+<label for="female">หญิง</label>
+<input type="radio" id="prefer_not_say" name="gender" value="prefer_not_say" checked>
+<label for="prefer_not_say">ไม่ระบุ</label>
+</div>
+
+<div class="checkbox-group">
+<p>ความสนใจ:</p>
+<input type="checkbox" id="coding" name="interest" value="coding">
+<label for="coding">การเขียนโปรแกรม</label><br>
+<input type="checkbox" id="design" name="interest" value="design">
+<label for="design">การออกแบบ</label><br>
+<input type="checkbox" id="reading" name="interest" value="reading">
+<label for="reading">การอ่านหนังสือ</label>
+</div>
+
+<label for="num_children">จำนวนบุตร (ถ้ามี):</label>
+<input type="number" id="num_children" name="num_children" min="0" max="10" value="0">
+
+<input type="submit" value="ลงทะเบียน">
+</form>
+
 </body>
+</html>
