--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
 <label for="birthdate">วันเกิด:</label>
 <input type="date" id="birthdate" name="birthdate">
 
+<div class="radio-group">
+<p>เพศ:</p>
+<input type="radio" id="male" name="gender" value="male"
+<label for="male">ชาย</label>
+  
+
 </form>
 
 </body>
