--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
 <p>เพศ:</p>
 <input type="radio" id="male" name="gender" value="male"
 <label for="male">ชาย</label>
+<input type="radio" id="female" name="gender" value="female">
+<label for="female">หญิง</label>
+<input type="radio" id="prefer_not_say" name="gender" value="prefer_not_say" checked>
+<label for="prefer_not_say">ไม่ระบุ</label>
+</div>
   
 
 </form>
