--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
 <input type="radio" id="prefer_not_say" name="gender" value="prefer_not_say" checked>
 <label for="prefer_not_say">ไม่ระบุ</label>
 </div>
+
+<div class="checkbox-group">
+<p>ความสนใจ:</p>
+<input type="checkbox" id="coding" name="interest" value="coding">
+<label for="coding">การเขียนโปรแกรม</label>
+  
+</div>
   
 
 </form>
