--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
 <p>ความสนใจ:</p>
 <input type="checkbox" id="coding" name="interest" value="coding">
 <label for="coding">การเขียนโปรแกรม</label>
+<br>
+<input type="checkbox" id="design" name="interest" value="design">
+<label for="design">การออกแบบ</label>
+<br>
   
 </div>
   
