--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
 <input type="checkbox" id="design" name="interest" value="design">
 <label for="design">การออกแบบ</label>
 <br>
+<input type="checkbox" id="reading" name="interest" value="reading">
+<label for="reading">การอ่าน</label>
+<br>
   
 </div>
   
