--- a/index.html
+++ b/index.html
@@ -42,10 +42,12 @@
 <input type="checkbox" id="reading" name="interest" value="reading">
 <label for="reading">การอ่าน</label>
 <br>
-  
 </div>
   
+<label for="num_children">จำนวนบุตร (ถ้ามี):</label>
+<input type="number" id="num_children" name="num_children" min="0" max="10" value="0">
 
+<input type="submit" value="ลงทะเบียน">
 </form>
 
 </body>
