--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>แบบฟอร์มลงทะเบียน</title>
+<style>
+body { font-family: Arial, sans-serif; margin: 20px; }
+form { border: 1px solid #ccc; padding: 20px; border-radius: 8px; max-width: 500px; margin: auto; }
 </head>
 <body>
 <h1>แบบฟอร์มลงทะเบียนผู้ใช้งาน</h1>
