--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <body>
     <h1>แบบฟอร์อมลงะทะเบียน web dav workshop</h1>
     <form acton="#" method="post">
-      
+      <label for="username"ชื่อผู้ลงทะเบียน:></label>
+      <input type="text" id="username" name="usernam">
+      <br><br>
     </form>
   </body>
 </html>
