--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <body>
     <h1>แบบฟอร์อมลงะทะเบียน web dav workshop</h1>
     <form acton="#" method="post">
-      <label for="username"ชื่อผู้ลงทะเบียน:></label>
-      <input type="text" id="username" name="usernam">
+      <label for="username"ชื่อ-นามสกุล:></label>
+      <input type="text"id="username"name="username"placeholder="กรอกชื่อเต็มของคุณ"required>
       <br><br>
     </form>
   </body>
