--- a/index.html
+++ b/index.html
@@ -10,6 +10,20 @@
     <form acton="#" method="post">
       <label for="username">ชื่อ-นามสกุล:</label>
       <input type="text"id="username"name="username"placeholder="กรอกชื่อเต็มของคุณ"required>
+      <br><br>
+
+      <label for="email">อิเมลล์:</label>
+      <input type="text"id="email"name="email"placeholder="กรอกอิเมลของคุณ"required>
+      <br><br>
+
+      <label for="username">ชื่อ-นามสกุล:</label>
+      <input type="text"id="username"name="username"placeholder="กรอกชื่อเต็มของคุณ"required>
+      <br><br>
+
+      <label for="username">ชื่อ-นามสกุล:</label>
+      <input type="text"id="username"name="username"placeholder="กรอกชื่อเต็มของคุณ"required>
+      <br><br>
+      
     
     </form>
   </body>
