--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <input type="text"id="email"name="email"placeholder="กรอกอิเมลของคุณ"required>
       <br><br>
 
-      <label for="username">ชื่อ-นามสกุล:</label>
-      <input type="text"id="username"name="username"placeholder="กรอกชื่อเต็มของคุณ"required>
+      <label for="create_password">รหัสผ่าน:</label>
+      <input type="password" id="create_password"name="create_password">
       <br><br>
 
       <label for="username">ชื่อ-นามสกุล:</label>
