--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       <input type="password" id="create_password"name="create_password">
       <br><br>
 
-      <label for="username">ชื่อ-นามสกุล:</label>
-      <input type="text"id="username"name="username"placeholder="กรอกชื่อเต็มของคุณ"required>
+      <label for="birthdate">วันเกิด:</label>
+      <input type="date"id="birthdate"name="birthdate">
       <br><br>
       
     
