--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
       <label for="birthdate">วันเกิด:</label>
       <input type="date"id="birthdate"name="birthdate">
       <br><br>
+
+      <div class="checkbox-group">
+      <p>ระดับความสนใจ</p>
+      <input type="checkbox" id="beginer" name="levelinterest" value="beginer">
+      <label for="beginer"มือใหม่></label>
       
     
     </form>
