--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="checkbox-group">
       <p>ระดับความสนใจ</p>
       <input type="checkbox" id="beginer" name="levelinterest" value="beginer">
-      <label for="beginer"มือใหม่></label>
+      <label for="beginer">มือใหม่</label>
       
     
     </form>
