--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="th">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"
     <mate name="viewport" content="width=device-width,initial-scal=1.0">
     <title>"ลงทะเบียน Web Dev Workshop"</title>
   </head>
@@ -26,7 +26,7 @@
 
       <div class="checkbox-group">
       <p>ระดับความสนใจ</p>
-      <input type="checkbox" id="beginer" name="levelinterest" value="beginer">
+      <input type="checkbox" id="beginer" name="levelinterest" value="beginer"cchecked>
       <label for="beginer">มือใหม่</label>
       <br><br>
 
@@ -34,13 +34,9 @@
       <label for="intermediate">มีประสบการณ์บ้างแล้ว</label>
       <br><br>
 
-      <input type="checkbox" id="beginer" name="levelinterest" value="beginer">
-      <label for="beginer">มือใหม่</label>
-      <br><br>
-
-      <input type="checkbox" id="beginer" name="levelinterest" value="beginer">
-      <label for="beginer">มือใหม่</label>
-      <br><br>
+      <input type="checkbox" id="pro" name="levelinterest" value="pro">
+      <label for="beginer">มืออาชีพ</label>
+      <br><br> <div>
         
     </form>
   </body>
