--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
       <div class="checkbox-group">
       <p>ระดับความสนใจ</p>
-      <input type="checkbox" id="beginer" name="levelinterest" value="beginer"cchecked>
+      <input type="checkbox" id="beginer" name="levelinterest" value="beginer" checked>
       <label for="beginer">มือใหม่</label>
       <br><br>
 
