--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
       <input type="date"id="birthdate"name="birthdate">
       <br><br>
 
-      <div class="checkbox-group">
+      <div class="radio-group">
       <p>ระดับความสนใจ</p>
-      <input type="checkbox" id="beginer" name="levelinterest" value="beginer" checked>
+      <input type="radio" id="beginer" name="levelinterest" value="beginer" checked>
       <label for="beginer">มือใหม่</label>
       <br><br>
 
-      <input type="checkbox" id="intermediate" name="levelinterest" value="intermediate">
+      <input type="radio" id="intermediate" name="levelinterest" value="intermediate">
       <label for="intermediate">มีประสบการณ์บ้างแล้ว</label>
       <br><br>
 
-      <input type="checkbox" id="pro" name="levelinterest" value="pro">
+      <input type="radio" id="pro" name="levelinterest" value="pro">
       <label for="beginer">มืออาชีพ</label>
       <br><br> <div>
         
