--- a/index.html
+++ b/index.html
@@ -36,8 +36,14 @@
 
       <input type="radio" id="pro" name="levelinterest" value="pro">
       <label for="beginer">มืออาชีพ</label>
-      <br><br> <div>
-        
+      <br><br> </div>
+
+      <div class="checkbox-group">
+      <p>ความถนัดด้านภาษาที่เคยใช้</p>
+      <input type="checkbox" id="html" name="language" value="html">
+      <label for="html">html</label>
+      </div>
+      
     </form>
   </body>
 </html>
