--- a/index.html
+++ b/index.html
@@ -35,13 +35,22 @@
       <br><br>
 
       <input type="radio" id="pro" name="levelinterest" value="pro">
-      <label for="beginer">มืออาชีพ</label>
+      <label for="pro">มืออาชีพ</label>
       <br><br> </div>
 
       <div class="checkbox-group">
       <p>ความถนัดด้านภาษาที่เคยใช้</p>
       <input type="checkbox" id="html" name="language" value="html">
-      <label for="html">html</label>
+      <label for="html">html</label> 
+      <br><br>
+
+      <input type="checkbox" id="css" name="language" value="css">
+      <label for="css">css</label> 
+      <br><br>
+
+      <input type="checkbox" id="JavaScript" name="language" value="JavaScript">
+      <label for="JavaScript">html</label> 
+      <br><br>
       </div>
       
     </form>
