--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
       <label for="JavaScript">html</label> 
       <br><br>
       </div>
+
+      <lebel for="num_friend">จำนวนเพื่อนที่จะมาด้วย</lebel>
+      <input type="number" id="num_friend" name="num_friend" min="0" max="5" value="0">
       
     </form>
   </body>
