--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
 
       <lebel for="num_friend">จำนวนเพื่อนที่จะมาด้วย</lebel>
       <input type="number" id="num_friend" name="num_friend" min="0" max="5" value="0">
+
+      <input type="sumit" valua="ยืนยันการลงทะเบียน">
       
     </form>
   </body>
