--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <input type="number" id="num_friend" name="num_friend" min="0" max="5" value="0">
       <br><br>
 
-      <input type="sumit" value="ยืนยันการลงทะเบียน">
+      <input type="submit" value="ยืนยันการลงทะเบียน">
       
     </form>
   </body>
