--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>"ลงทะเบียน Web Dev Workshop"</title>
     <stlye>
       body{font-family:Arial,sans-serif;margin:20px}
-      form{bodef:1px solid #ccc; padding:20px; border-radius:8px max-width:500px; margin: auto;;}
+      form{bodef:1px solid #ccc; padding:20px; border-radius:8px max-width:500px; margin: auto;}
     </stlye>
   </head>
   <body>
