--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8"
     <mate name="viewport" content="width=device-width,initial-scal=1.0">
     <title>"ลงทะเบียน Web Dev Workshop"</title>
-    <stlye>
+    <styl>
       body{font-family:Arial,sans-serif;margin:20px}
       form{bodef:1px solid #ccc; padding:20px; border-radius:8px max-width:500px; margin: auto;}
-    </stlye>
+    </style>
   </head>
   <body>
     <h1>แบบฟอร์อมลงะทะเบียน web dav workshop</h1>
