--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"
     <mate name="viewport" content="width=device-width,initial-scal=1.0">
     <title>"ลงทะเบียน Web Dev Workshop"</title>
-    <styl>
+    <style>
       body{font-family:Arial,sans-serif;margin:20px}
       form{bodef:1px solid #ccc; padding:20px; border-radius:8px max-width:500px; margin: auto;}
     </style>
@@ -53,7 +53,7 @@
       <br><br>
 
       <input type="checkbox" id="JavaScript" name="language" value="JavaScript">
-      <label for="JavaScript">html</label> 
+      <label for="JavaScript">javaScript</label> 
       <br><br>
       </div>
 
