--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <mate name="viewport" content="width=device-width,initial-scal=1.0">
     <title>"ลงทะเบียน Web Dev Workshop"</title>
     <style>
-      body{font-family:Arial,sans-serif;margin:20px}
-      form{bodef:1px solid #ccc; padding:20px; border-radius:8px max-width:500px; margin: auto;}
+body { font-family: Arial, sans-serif; margin: 20px; }
+form { border: 1px solid #ccc; padding: 20px; border-radius: 8px; max-width: 500px; margin: auto; }
     </style>
   </head>
   <body>
