--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <style>
 body { font-family: Arial, sans-serif; margin: 20px; }
 form { border: 1px solid #ccc; padding: 20px; border-radius: 8px; max-width: 500px; margin: auto; }
-
+</style>
   </head>
   <body>
     <h1>แบบฟอร์อมลงะทะเบียน web dav workshop</h1>
