--- a/index.html
+++ b/index.html
@@ -1,67 +1,17 @@
-<!DOCTYPE html>
-<html lang="th">
-  <head>
-    <meta charset="UTF-8"
-    <mate name="viewport" content="width=device-width,initial-scal=1.0">
-    <style>
-body { font-family: Arial, sans-serif; margin: 20px; }
-form { border: 1px solid #ccc; padding: 20px; border-radius: 8px; max-width: 500px; margin: auto; }
-</style>
-  </head>
-  <body>
-    <h1>แบบฟอร์อมลงะทะเบียน web dav workshop</h1>
-    <form acton="#" method="post">
-      <label for="username">ชื่อ-นามสกุล:</label>
-      <input type="text"id="username"name="username"placeholder="กรอกชื่อเต็มของคุณ"required>
-      <br><br>
-
-      <label for="email">อิเมลล์:</label>
-      <input type="text"id="email"name="email"placeholder="กรอกอิเมลของคุณ"required>
-      <br><br>
-
-      <label for="create_password">รหัสผ่าน:</label>
-      <input type="password" id="create_password"name="create_password">
-      <br><br>
-
-      <label for="birthdate">วันเกิด:</label>
-      <input type="date"id="birthdate"name="birthdate">
-      <br><br>
-
-      <div class="radio-group">
-      <p>ระดับความสนใจ</p>
-      <input type="radio" id="beginer" name="levelinterest" value="beginer" checked>
-      <label for="beginer">มือใหม่</label>
-      <br><br>
-
-      <input type="radio" id="intermediate" name="levelinterest" value="intermediate">
-      <label for="intermediate">มีประสบการณ์บ้างแล้ว</label>
-      <br><br>
-
-      <input type="radio" id="pro" name="levelinterest" value="pro">
-      <label for="pro">มืออาชีพ</label>
-      <br><br> </div>
-
-      <div class="checkbox-group">
-      <p>ความถนัดด้านภาษาที่เคยใช้</p>
-      <input type="checkbox" id="html" name="language" value="html">
-      <label for="html">html</label> 
-      <br><br>
-
-      <input type="checkbox" id="css" name="language" value="css">
-      <label for="css">css</label> 
-      <br><br>
-
-      <input type="checkbox" id="JavaScript" name="language" value="JavaScript">
-      <label for="JavaScript">javaScript</label> 
-      <br><br>
-      </div>
-
-      <lebel for="num_friend">จำนวนเพื่อนที่จะมาด้วย</lebel>
-      <input type="number" id="num_friend" name="num_friend" min="0" max="5" value="0">
-      <br><br>
-
-      <input type="submit" value="ยืนยันการลงทะเบียน">
-      
-    </form>
-  </body>
-</html>
+1  <!DOCTYPE html>
+2  <html lang="th">
+3      <head>
+4          <meta charset="UTF-8">
+5          <meta name="viewport" content="width=device-width,initain-scal=1.0">
+6          <title> CSS selector Eaxample</title>
+7      </head>
+8      <body>
+9          <h1><id="main-heading">การใช้ Css selector</h1>
+10         <div class="container">
+11             <p>นี่ย่อหน้าปกติที่อยู่ใน div ที่มี class <span class="hightlight">hightlight</span></p>
+12             <p id="important-text">นี่คือย่อหน้าที่สำคัญที่มี id ที่สำคัญ.</p>
+13             <p class="hightlight">ย่อหน้านี้ก็มี cass <span style="font-style:normal;color:black;">hightlight</span> เช่นกัน.</p>
+14             </div>
+15
+16             
+17 </html>
